# learn-opengl

./: CMakeLists.txt
include/: Scene.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Scene.cpp  main.cpp
